# CMU-16891-Project

./: CMakeLists.txt  README.md
assignments/: 100_agents_assignment.txt  16_agents_assignment.txt  196_agents_assignment.txt  25_agents_assignment.txt  4_agents_assignment.txt  64_agents_assignment.txt
assignments/random_experiments/: 4_agents_exp1.txt  50_agents_exp1.txt  50_agents_exp2.txt
assignments/random_experiments/10_agents/: 10_agents_exp1.txt  10_agents_exp10.txt  10_agents_exp2.txt  10_agents_exp3.txt  10_agents_exp4.txt  10_agents_exp5.txt  10_agents_exp6.txt  10_agents_exp7.txt  10_agents_exp8.txt  10_agents_exp9.txt
assignments/random_experiments/20_agents/: 20_agents_exp1.txt  20_agents_exp10.txt  20_agents_exp2.txt  20_agents_exp3.txt  20_agents_exp4.txt  20_agents_exp5.txt  20_agents_exp6.txt  20_agents_exp7.txt  20_agents_exp8.txt  20_agents_exp9.txt
cmake_modules/: FindCASADI.cmake
include/: CBSSolver.hpp  DoubleIntegrator.hpp  Quadcopter.hpp  ShapeDecomposer.hpp  ShapeDecomposerSphere.hpp  TrajectoryOptimizer.hpp  collision_detector.hpp  goalAllocator.hpp  utils.h  utils.hpp
julia/: Manifest.toml  Project.toml  display_trajectory.ipynb
julia/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  double_integrator-checkpoint.ipynb
julia/utils/: fmincon.jl  quadrotor.jl
scripts/: all_traj.txt  display_sol.py  test.txt  test_julia.txt  visualize_traj.py
src/: CBSSolver.cpp  DoubleIntegrator.cpp  Quadcopter.cpp  ShapeDecomposer.cpp  ShapeDecomposerSphere.cpp  TrajectoryOptimizer.cpp  collision_detector.cpp  goalAllocator.cpp  main.cpp
(+59 files in other folders)
